main-test/calico-test/uptoSlack/isolation-vlan1.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: isolation-ns-1
spec:
  selector: projectcalico.org/namespace == "test1"
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    metadata:
      annotations:
        from: ns1
        to: itself
    protocol: TCP
    source:
        nets: ['10.0.0.0/28']
  - action: Allow
    metadata:
      annotations:
        from: ns1
        to: itself
    protocol: ICMP
    source:
        nets: ['10.0.0.0/28']

  - action: Deny
    metadata:
        annotations:
          from: other_namespace
          to: test1
    protocol: TCP
    source:
      notNets: ['10.0.0.0/28']
